# Presence

./: .gitignore  App.fs  Cargo.toml  DiscordRPCClient.MainWindow.xaml  DiscordRPCClient.fsproj  DiscordRPCClient.sln  HOWTO.html  LICENSE.txt  MainWindow.fs  Model.fs  Program.fs  README.md  Rpc.fs  index.md  installer.iss
assets/: icon.afdesign  paste.afdesign  plus.afdesign  splash.afdesign  window-minimize.afdesign  window-x.afdesign
discord-rpc-csharp-master/Discord RPC/: Discord RPC.sln  DiscordRPC.csproj  DiscordRpcClient.cs
discord-rpc-csharp-master/Discord RPC/RPC/: RpcConnection.cs
img/: Thumbs.db
res/: Thumbs.db  context-menu-presences.html  context-menu.html  ddm.tis  icon.afdesign  main.html  main.tis  presence-config.tis  presences.tis  util.tis
res/img/: Thumbs.db
res/style/: dark.css  lightbox-dialog.css  main.css  presence-config.css  presence.css  toolbar.css
rust-discord-rpc/: Cargo.toml  LICENSE  README.md
rust-discord-rpc/examples/: demo.rs
rust-discord-rpc/src/: event_handlers.rs  event_wrappers.rs  join_request.rs  lib.rs  presence.rs
rust-discord-rpc/sys/: Cargo.toml  build.rs
rust-discord-rpc/sys/discord-rpc-3.1.0/examples/send-presence/: send-presence.c
rust-discord-rpc/sys/discord-rpc-3.1.0/examples/unrealstatus/Plugins/discordrpc/Source/DiscordRpc/Private/: DiscordRpc.cpp  DiscordRpcBlueprint.cpp
rust-discord-rpc/sys/discord-rpc-3.1.0/src/: discord_rpc.cpp
src/: host.rs  main.rs  model.rs  resources.rc  tray.rs  update.rs  value.rs
