[package]
name = "discord_rpc_client_gui"
version = "1.0.3"
authors = ["Thomas-QM <thomas@engineeringvirtue.net>"]

[dependencies]
sciter-rs = "*"
libc = "0.2.58"

float_duration = "0.3.3"
lazy_static = "1.3.0"
rayon = "1.1.0"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
dirs = "2.0.1"

[dependencies.discord-rpc-sdk]
path = "rust-discord-rpc"